--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
     <meta name="twitter:site" content="" />
     <meta name="twitter:title" content="Peripleo | MARK16 Dataviz" />
     <meta name="twitter:description" content="A visualisation of manuscripts and their repositories. The manuscripts main features - language, name and location - can be searched." />
-    <meta name="twitter:image" content="dataviz-preview.png" />
+    <meta name="twitter:image" content="https://dataviz-mark16.sib.swiss/dataviz-preview.png" />
     <!-- OG metadata -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Peripleo | MARK16 Dataviz" />
     <meta property="og:description" content="A visualisation of manuscripts and their repositories. The manuscripts main features - language, name and location - can be searched." />
-    <meta property="og:image" content="dataviz-preview.png" />
+    <meta property="og:image" content="https://dataviz-mark16.sib.swiss/dataviz-preview.png" />
     <meta property="og:image:width" content="1000" />
     <meta property="og:image:height" content="500" />
     <meta property="og:url" content="https://dataviz-mark16.sib.swiss/" />
