update social preview

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A visualisation of manuscripts and their repositories. The manuscripts main features - language, name and location - can be searched." />
     <!-- Twitter card metadata -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="" />
+    <meta name="twitter:site" content="@cclivaz" />
     <meta name="twitter:title" content="Peripleo | MARK16 Dataviz" />
     <meta name="twitter:description" content="A visualisation of manuscripts and their repositories. The manuscripts main features - language, name and location - can be searched." />
     <meta name="twitter:image" content="https://dataviz-mark16.sib.swiss/dataviz-preview.png" />
@@ -20,6 +20,9 @@
     <meta property="og:image:width" content="1000" />
     <meta property="og:image:height" content="500" />
     <meta property="og:url" content="https://dataviz-mark16.sib.swiss/" />
+    <!-- Bing metadata -->
+    <meta name="robots" content="max-snippet:400" />
+    <meta name="robots" content="max-image-preview:large" />
     <!-- Imports-->
     <link href='https://unpkg.com/maplibre-gl@2.1.1/dist/maplibre-gl.css' rel='stylesheet' />
     <link rel="preconnect" href="https://fonts.googleapis.com">
